crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_find_last.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": 3,
  "r2": 3
}
