crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_flatten.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    1,
    2,
    3,
    4
  ],
  "r2": [
    1,
    2,
    3,
    4
  ],
  "r3": []
}
