crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_map_non_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": [
    1,
    2,
    3
  ],
  "r2": [],
  "r3": []
}
