crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_min_by_max_by.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": 1,
  "r2": 3,
  "r3": 3,
  "r4": 1,
  "r5": "Pigeon",
  "r6": "Barn Owl"
}
