crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_min_max_datasizes.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r_min": "100mb",
  "r_max": "12tb"
}
